# Trash-Kan

./: .gitignore  ngrok.yml  package-lock.json  package.json
app/: login.tsx
backend/: README.md  pyproject.toml
backend/api/: config.py  index.html  main.py  middleware.py  security.py
backend/api/routers/: auth.py  sacolas.py  users.py
frontend/: app.json  package-lock.json  package.json
frontend/app/: _layout.tsx  auth-callback.tsx  login.tsx
frontend/app/(tabs)/: _layout.tsx  home.tsx  index.tsx  map.tsx
frontend/hooks/: usePlatform.ts
